# wasm-gradecalc

./: Cargo.toml  LICENSE  README.md  gradecalc.html
src/: gradecalc.rs  lib.rs
